module imports change

--- a/approx.ipynb
+++ b/approx.ipynb
@@ -35,14 +35,12 @@
     "from sklearn import metrics\n",
     "from torch.optim import Adam\n",
     "\n",
-    "filepath = os.path.abspath('')\n",
-    "sys.path.append(os.path.join(filepath, \"..\", \"compiling_nn\"))\n",
-    "sys.path.append(os.path.join(filepath, \"..\", \"utils\"))\n",
-    "sys.path.append(os.path.join(filepath, \"..\", \"datasets\", \"loan\"))\n",
-    "from build_odd import compile_nn\n",
-    "from loan import get_loan_dataset\n",
-    "from custom_loss import ExpLoss, AsymMSELoss\n",
-    "from custom_activations import StepActivation\n",
+    "sys.path.append(os.path.abspath(''))\n",
+    "\n",
+    "from compiling_nn.build_odd import compile_nn\n",
+    "from datasets.loan import get_loan_dataset\n",
+    "from utils.custom_activations import StepActivation\n",
+    "from utils.custom_loss import AsymMSELoss, AsymBCELoss\n",
     "\n",
     "pd.options.mode.copy_on_write = True"
    ]
