--- a/compare.ipynb
+++ b/compare.ipynb
@@ -29,14 +29,12 @@
     "from torch.autograd import Function\n",
     "from torch.optim import Adam\n",
     "\n",
-    "filepath = os.path.abspath('')\n",
-    "sys.path.append(os.path.join(filepath, \"..\", \"compiling_nn\"))\n",
-    "sys.path.append(os.path.join(filepath, \"..\", \"utils\"))\n",
-    "sys.path.append(os.path.join(filepath, \"..\", \"datasets\", \"loan\"))\n",
-    "from build_odd import compile_nn\n",
-    "from loan import get_loan_dataset\n",
-    "from custom_activations import StepActivation\n",
-    "from custom_loss import AsymMSELoss, AsymBCELoss\n",
+    "sys.path.append(os.path.abspath(''))\n",
+    "\n",
+    "from compiling_nn.build_odd import compile_nn\n",
+    "from datasets.loan import get_loan_dataset\n",
+    "from utils.custom_activations import StepActivation\n",
+    "from utils.custom_loss import AsymMSELoss, AsymBCELoss\n",
     "\n",
     "pd.options.mode.copy_on_write = True"
    ]
@@ -384,55 +382,55 @@
      "output_type": "stream",
      "text": [
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.788    |    SimpleNet      0.813    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.720    |    Low            0.686    ||    High           0.855    |    Low            0.869\n",
-      "\tCoverage      High           0.643    |    Low            0.857    ||    High           0.746    |    Low            1.000\n",
-      "\t              High           0.857    |    Low            0.357    ||    High           1.000    |    Low            0.698\n",
+      "\tF1 score      BoundNet       0.815    |    SimpleNet      0.800    ||    BoundNet       1.000    |    SimpleNet      0.992\n",
+      "\t              High           0.750    |    Low            0.788    ||    High           0.855    |    Low            0.832\n",
+      "\tCoverage      High           0.643    |    Low            0.929    ||    High           0.746    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.571    ||    High           1.000    |    Low            0.595\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.643    |    SimpleNet      0.643    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.381    |    Low            0.727    ||    High           0.849    |    Low            0.848\n",
-      "\tCoverage      High           0.286    |    Low            0.857    ||    High           0.738    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.643\n",
+      "\tF1 score      BoundNet       0.774    |    SimpleNet      0.727    ||    BoundNet       0.996    |    SimpleNet      1.000\n",
+      "\t              High           0.609    |    Low            0.778    ||    High           0.788    |    Low            0.762\n",
+      "\tCoverage      High           0.500    |    Low            1.000    ||    High           0.651    |    Low            0.992\n",
+      "\t              High           0.857    |    Low            0.429    ||    High           1.000    |    Low            0.389\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.714    |    SimpleNet      0.800    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.455    |    Low            0.765    ||    High           0.771    |    Low            0.821\n",
-      "\tCoverage      High           0.357    |    Low            0.929    ||    High           0.627    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.563\n",
+      "\tF1 score      BoundNet       0.813    |    SimpleNet      0.733    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.615    |    Low            0.824    ||    High           0.765    |    Low            0.869\n",
+      "\tCoverage      High           0.571    |    Low            1.000    ||    High           0.619    |    Low            1.000\n",
+      "\t              High           0.714    |    Low            0.571    ||    High           1.000    |    Low            0.698\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.786    |    SimpleNet      0.741    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.640    |    Low            0.722    ||    High           0.828    |    Low            0.881\n",
-      "\tCoverage      High           0.571    |    Low            0.929    ||    High           0.706    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.357    ||    High           1.000    |    Low            0.730\n",
+      "\tF1 score      BoundNet       0.786    |    SimpleNet      0.867    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.636    |    Low            0.743    ||    High           0.828    |    Low            0.851\n",
+      "\tCoverage      High           0.500    |    Low            0.929    ||    High           0.706    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.429    ||    High           1.000    |    Low            0.651\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.645    |    SimpleNet      0.615    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.500    |    Low            0.621    ||    High           0.794    |    Low            0.866\n",
-      "\tCoverage      High           0.429    |    Low            0.643    ||    High           0.659    |    Low            1.000\n",
-      "\t              High           0.714    |    Low            0.571    ||    High           1.000    |    Low            0.690\n",
+      "\tF1 score      BoundNet       0.759    |    SimpleNet      0.867    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.640    |    Low            0.800    ||    High           0.746    |    Low            0.869\n",
+      "\tCoverage      High           0.571    |    Low            1.000    ||    High           0.595    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.698\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.690    |    SimpleNet      0.714    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.750    |    Low            0.759    ||    High           0.855    |    Low            0.878\n",
-      "\tCoverage      High           0.643    |    Low            0.786    ||    High           0.746    |    Low            1.000\n",
-      "\t              High           0.929    |    Low            0.714    ||    High           1.000    |    Low            0.722\n",
+      "\tF1 score      BoundNet       0.815    |    SimpleNet      0.733    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.750    |    Low            0.800    ||    High           0.914    |    Low            0.903\n",
+      "\tCoverage      High           0.643    |    Low            1.000    ||    High           0.841    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.500    ||    High           1.000    |    Low            0.786\n",
       "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.643    |    SimpleNet      0.643    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.455    |    Low            0.759    ||    High           0.817    |    Low            0.900\n",
-      "\tCoverage      High           0.357    |    Low            0.786    ||    High           0.690    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.714    ||    High           1.000    |    Low            0.778\n",
+      "\tF1 score      BoundNet       0.519    |    SimpleNet      0.538    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.381    |    Low            0.737    ||    High           0.844    |    Low            0.851\n",
+      "\tCoverage      High           0.286    |    Low            1.000    ||    High           0.730    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.286    ||    High           1.000    |    Low            0.651\n",
       "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.759    |    SimpleNet      0.667    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.571    |    Low            0.824    ||    High           0.885    |    Low            0.797\n",
-      "\tCoverage      High           0.429    |    Low            1.000    ||    High           0.794    |    Low            1.000\n",
-      "\t              High           0.929    |    Low            0.571    ||    High           1.000    |    Low            0.492\n",
+      "\tF1 score      BoundNet       0.815    |    SimpleNet      0.769    ||    BoundNet       0.996    |    SimpleNet      1.000\n",
+      "\t              High           0.571    |    Low            0.778    ||    High           0.839    |    Low            0.786\n",
+      "\tCoverage      High           0.429    |    Low            1.000    ||    High           0.722    |    Low            0.992\n",
+      "\t              High           0.929    |    Low            0.429    ||    High           1.000    |    Low            0.468\n",
       "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.733    |    SimpleNet      0.750    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.769    |    Low            0.757    ||    High           0.855    |    Low            0.875\n",
-      "\tCoverage      High           0.714    |    Low            1.000    ||    High           0.746    |    Low            1.000\n",
-      "\t              High           0.857    |    Low            0.357    ||    High           1.000    |    Low            0.714\n",
+      "\tF1 score      BoundNet       0.643    |    SimpleNet      0.621    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.636    |    Low            0.647    ||    High           0.752    |    Low            0.881\n",
+      "\tCoverage      High           0.500    |    Low            0.786    ||    High           0.603    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.357    ||    High           1.000    |    Low            0.730\n",
       "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.643    |    SimpleNet      0.786    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.571    |    Low            0.706    ||    High           0.752    |    Low            0.916\n",
-      "\tCoverage      High           0.429    |    Low            0.857    ||    High           0.603    |    Low            1.000\n",
-      "\t              High           0.929    |    Low            0.429    ||    High           1.000    |    Low            0.817\n"
+      "\tF1 score      BoundNet       0.733    |    SimpleNet      0.750    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.500    |    Low            0.800    ||    High           0.806    |    Low            0.903\n",
+      "\tCoverage      High           0.357    |    Low            1.000    ||    High           0.675    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.500    ||    High           1.000    |    Low            0.786\n"
      ]
     }
    ],
@@ -488,10 +486,10 @@
      "output_type": "stream",
      "text": [
       "Average  :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.704    |    SimpleNet      0.717    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.581    |    Low            0.732    ||    High           0.826    |    Low            0.865\n",
-      "\tCoverage      High           0.486    |    Low            0.864    ||    High           0.706    |    Low            1.000\n",
-      "\t              High           0.836    |    Low            0.507    ||    High           1.000    |    Low            0.685\n"
+      "\tF1 score      BoundNet       0.747    |    SimpleNet      0.741    ||    BoundNet       0.999    |    SimpleNet      0.999\n",
+      "\t              High           0.609    |    Low            0.769    ||    High           0.814    |    Low            0.851\n",
+      "\tCoverage      High           0.500    |    Low            0.964    ||    High           0.689    |    Low            0.998\n",
+      "\t              High           0.871    |    Low            0.457    ||    High           1.000    |    Low            0.645\n"
      ]
     }
    ],
