starting point derivate logical layer

--- a/compare.ipynb
+++ b/compare.ipynb
@@ -255,14 +255,14 @@
     "        hl1 = 50\n",
     "        hl2 = 25\n",
     "\n",
-    "        self.nn = nn.Sequential(\n",
-    "            nn.Linear(input_size,hl1),\n",
-    "            nn.Sigmoid(),\n",
-    "            nn.Linear(hl1,hl2),\n",
-    "            nn.Sigmoid(),\n",
-    "            nn.Linear(hl2,1),\n",
-    "            StepActivation(),\n",
-    "        )\n",
+    "        self. nn = nn.Sequential(OrderedDict([\n",
+    "            ('l1', nn.Linear(input_size,hl1)),\n",
+    "            ('a1', nn.Sigmoid()),\n",
+    "            ('l2', nn.Linear(hl1,hl2)),\n",
+    "            ('a2', nn.Sigmoid()),\n",
+    "            ('l3', nn.Linear(hl2,1)),\n",
+    "            ('a3', StepActivation()),\n",
+    "        ]))\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.nn(x)\n",
