--- a/derivate_layer.ipynb
+++ b/derivate_layer.ipynb
@@ -358,65 +358,65 @@
      "output_type": "stream",
      "text": [
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.286    ||    Approx 1       0.667    |    Approx 2       0.000\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.714    |    Approx 2       0.214    ||    Approx 2       1.000    |    Approx 2       0.000\n",
+      "\tF1 score      Net            0.786    |    CentralNet     0.545    ||    Net            1.000    |    CentralNet     0.954\n",
+      "\t              Approx 1       0.421    |    Approx 2       0.640    ||    Approx 1       0.875    |    Approx 2       0.971\n",
+      "\tCoverage      CentralNet     0.857    |    CentralNet     0.429    ||    CentralNet     1.000    |    CentralNet     0.913\n",
+      "\t              Approx 1       0.929    |    Approx 1       0.286    ||    Approx 1       1.000    |    Approx 1       0.778\n",
+      "\t              Approx 2       0.786    |    Approx 2       0.571    ||    Approx 2       1.000    |    Approx 2       0.944\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.667    ||    Approx 1       0.667    |    Approx 2       0.667\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.000    |    Approx 2       1.000    ||    Approx 2       0.000    |    Approx 2       1.000\n",
+      "\tF1 score      Net            0.690    |    CentralNet     0.615    ||    Net            1.000    |    CentralNet     0.954\n",
+      "\t              Approx 1       0.583    |    Approx 2       0.593    ||    Approx 1       0.844    |    Approx 2       0.904\n",
+      "\tCoverage      CentralNet     0.714    |    CentralNet     0.571    ||    CentralNet     1.000    |    CentralNet     0.913\n",
+      "\t              Approx 1       0.786    |    Approx 1       0.500    ||    Approx 1       1.000    |    Approx 1       0.730\n",
+      "\t              Approx 2       0.643    |    Approx 2       0.571    ||    Approx 2       1.000    |    Approx 2       0.825\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.667    ||    Approx 1       0.667    |    Approx 2       0.667\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.000    |    Approx 2       1.000    ||    Approx 2       0.000    |    Approx 2       1.000\n",
+      "\tF1 score      Net            0.824    |    CentralNet     0.813    ||    Net            0.992    |    CentralNet     0.984\n",
+      "\t              Approx 1       0.560    |    Approx 2       0.710    ||    Approx 1       0.819    |    Approx 2       0.988\n",
+      "\tCoverage      CentralNet     0.643    |    CentralNet     0.929    ||    CentralNet     1.000    |    CentralNet     0.968\n",
+      "\t              Approx 1       0.714    |    Approx 1       0.500    ||    Approx 1       0.992    |    Approx 1       0.698\n",
+      "\t              Approx 2       0.571    |    Approx 2       0.786    ||    Approx 2       1.000    |    Approx 2       0.976\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.667    ||    Approx 1       0.667    |    Approx 2       0.667\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.000    |    Approx 2       1.000    ||    Approx 2       0.000    |    Approx 2       1.000\n",
+      "\tF1 score      Net            0.710    |    CentralNet     0.667    ||    Net            1.000    |    CentralNet     0.984\n",
+      "\t              Approx 1       0.714    |    Approx 2       0.667    ||    Approx 1       0.954    |    Approx 2       0.988\n",
+      "\tCoverage      CentralNet     0.714    |    CentralNet     0.643    ||    CentralNet     1.000    |    CentralNet     0.968\n",
+      "\t              Approx 1       0.714    |    Approx 1       0.714    ||    Approx 1       1.000    |    Approx 1       0.913\n",
+      "\t              Approx 2       0.714    |    Approx 2       0.643    ||    Approx 2       1.000    |    Approx 2       0.976\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.667    ||    Approx 1       0.667    |    Approx 2       0.667\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.000    |    Approx 2       1.000    ||    Approx 2       0.000    |    Approx 2       1.000\n",
+      "\tF1 score      Net            0.765    |    CentralNet     0.692    ||    Net            1.000    |    CentralNet     0.950\n",
+      "\t              Approx 1       0.519    |    Approx 2       0.839    ||    Approx 1       0.880    |    Approx 2       0.980\n",
+      "\tCoverage      CentralNet     0.786    |    CentralNet     0.643    ||    CentralNet     1.000    |    CentralNet     0.905\n",
+      "\t              Approx 1       0.571    |    Approx 1       0.500    ||    Approx 1       1.000    |    Approx 1       0.786\n",
+      "\t              Approx 2       0.714    |    Approx 2       0.929    ||    Approx 2       1.000    |    Approx 2       0.960\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.667    ||    Approx 1       0.667    |    Approx 2       0.667\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.000    |    Approx 2       1.000    ||    Approx 2       0.000    |    Approx 2       1.000\n",
+      "\tF1 score      Net            0.800    |    CentralNet     0.857    ||    Net            1.000    |    CentralNet     0.971\n",
+      "\t              Approx 1       0.692    |    Approx 2       0.741    ||    Approx 1       0.937    |    Approx 2       0.984\n",
+      "\tCoverage      CentralNet     0.857    |    CentralNet     0.857    ||    CentralNet     1.000    |    CentralNet     0.944\n",
+      "\t              Approx 1       0.786    |    Approx 1       0.643    ||    Approx 1       1.000    |    Approx 1       0.881\n",
+      "\t              Approx 2       0.786    |    Approx 2       0.714    ||    Approx 2       1.000    |    Approx 2       0.968\n",
       "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.667    ||    Approx 1       0.667    |    Approx 2       0.667\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.000    |    Approx 2       1.000    ||    Approx 2       0.000    |    Approx 2       1.000\n",
+      "\tF1 score      Net            0.824    |    CentralNet     0.848    ||    Net            0.996    |    CentralNet     0.976\n",
+      "\t              Approx 1       0.741    |    Approx 2       0.733    ||    Approx 1       0.806    |    Approx 2       0.937\n",
+      "\tCoverage      CentralNet     0.643    |    CentralNet     1.000    ||    CentralNet     1.000    |    CentralNet     0.952\n",
+      "\t              Approx 1       0.786    |    Approx 1       0.714    ||    Approx 1       1.000    |    Approx 1       0.675\n",
+      "\t              Approx 2       0.643    |    Approx 2       0.786    ||    Approx 2       0.992    |    Approx 2       0.889\n",
       "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.667    ||    Approx 1       0.667    |    Approx 2       0.667\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.000    |    Approx 2       1.000    ||    Approx 2       0.000    |    Approx 2       1.000\n",
+      "\tF1 score      Net            0.800    |    CentralNet     0.741    ||    Net            1.000    |    CentralNet     0.963\n",
+      "\t              Approx 1       0.400    |    Approx 2       0.800    ||    Approx 1       0.811    |    Approx 2       0.988\n",
+      "\tCoverage      CentralNet     0.786    |    CentralNet     0.714    ||    CentralNet     1.000    |    CentralNet     0.929\n",
+      "\t              Approx 1       0.857    |    Approx 1       0.286    ||    Approx 1       1.000    |    Approx 1       0.683\n",
+      "\t              Approx 2       0.929    |    Approx 2       0.714    ||    Approx 2       1.000    |    Approx 2       0.976\n",
       "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.000    ||    Approx 1       0.667    |    Approx 2       0.667\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       1.000    |    Approx 2       0.000    ||    Approx 2       0.000    |    Approx 2       1.000\n",
+      "\tF1 score      Net            0.727    |    CentralNet     0.621    ||    Net            1.000    |    CentralNet     0.976\n",
+      "\t              Approx 1       0.593    |    Approx 2       0.538    ||    Approx 1       0.880    |    Approx 2       0.959\n",
+      "\tCoverage      CentralNet     0.571    |    CentralNet     0.643    ||    CentralNet     1.000    |    CentralNet     0.952\n",
+      "\t              Approx 1       0.643    |    Approx 1       0.571    ||    Approx 1       1.000    |    Approx 1       0.786\n",
+      "\t              Approx 2       0.643    |    Approx 2       0.500    ||    Approx 2       1.000    |    Approx 2       0.921\n",
       "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.000    ||    Approx 1       0.667    |    Approx 2       0.000\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       1.000    |    Approx 2       0.000    ||    Approx 2       1.000    |    Approx 2       0.000\n"
+      "\tF1 score      Net            0.706    |    CentralNet     0.714    ||    Net            1.000    |    CentralNet     0.980\n",
+      "\t              Approx 1       0.800    |    Approx 2       0.643    ||    Approx 1       0.909    |    Approx 2       0.988\n",
+      "\tCoverage      CentralNet     0.714    |    CentralNet     0.714    ||    CentralNet     1.000    |    CentralNet     0.960\n",
+      "\t              Approx 1       0.714    |    Approx 1       0.857    ||    Approx 1       1.000    |    Approx 1       0.833\n",
+      "\t              Approx 2       0.643    |    Approx 2       0.643    ||    Approx 2       1.000    |    Approx 2       0.976\n"
      ]
     }
    ],
@@ -488,11 +488,11 @@
      "output_type": "stream",
      "text": [
       "Average  :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.667    |    CentralNet     0.000    ||    Net            0.667    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.667    |    Approx 2       0.495    ||    Approx 1       0.667    |    Approx 2       0.533\n",
-      "\tCoverage      CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.000    |    Approx 1       1.000    ||    Approx 1       0.000    |    Approx 1       1.000\n",
-      "\t              Approx 2       0.271    |    Approx 2       0.721    ||    Approx 2       0.200    |    Approx 2       0.800\n"
+      "\tF1 score      Net            0.763    |    CentralNet     0.711    ||    Net            0.999    |    CentralNet     0.969\n",
+      "\t              Approx 1       0.602    |    Approx 2       0.690    ||    Approx 1       0.871    |    Approx 2       0.969\n",
+      "\tCoverage      CentralNet     0.729    |    CentralNet     0.714    ||    CentralNet     1.000    |    CentralNet     0.940\n",
+      "\t              Approx 1       0.750    |    Approx 1       0.557    ||    Approx 1       0.999    |    Approx 1       0.776\n",
+      "\t              Approx 2       0.707    |    Approx 2       0.686    ||    Approx 2       0.999    |    Approx 2       0.941\n"
      ]
     }
    ],
@@ -521,51 +521,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "true = tensor([1., 0., 1., 1., 0., 1., 1., 0.])\n",
-      "input = tensor([[ 6., 32., 13., 28., 14., 20., 23., 31.],\n",
-      "        [ 8.,  5., 24.,  4., 26.,  3., 16., 25.],\n",
-      "        [12., 27.,  2., 15.,  7.,  1., 29., 21.],\n",
-      "        [18., 10., 17.,  9., 11., 22., 19., 30.]])\n",
-      "cond = tensor([[ True,  True,  True,  True,  True,  True,  True,  True],\n",
-      "        [ True, False,  True,  True, False,  True,  True, False],\n",
-      "        [ True, False, False,  True, False,  True,  True, False],\n",
-      "        [ True, False, False,  True, False,  True, False, False]])\n",
-      "grad = tensor([[43, 43, 43, 43, 43, 43, 43, 43],\n",
-      "        [43,  0, 43, 43,  0, 43, 43,  0],\n",
-      "        [43,  0,  0, 43,  0, 43, 43,  0],\n",
-      "        [43,  0,  0, 43,  0, 43,  0,  0]])\n"
-     ]
-    }
-   ],
    "source": [
-    "input = torch.Tensor([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32])\n",
-    "true = torch.randn((8))\n",
-    "true = (true-true.min())/(true.max()-true.min())\n",
-    "true = true.round()\n",
-    "p=torch.randperm(32)\n",
-    "input=input[p].reshape((-1,8))\n",
-    "\n",
-    "cond = true.repeat((4,1)).to(bool)\n",
-    "cond[0] = True\n",
-    "cond[2] = cond[1] & (input[1]<=16)\n",
-    "cond[3] = cond[2] & (input[2]<=16)\n",
-    "\n",
-    "bli = true.repeat((4,1)).to(bool)\n",
-    "bli[0] = True\n",
-    "bli[2]&=(input[1]<=16)\n",
-    "bli[3]&=((input[1]<=16) & (input[2]<=16))\n",
-    "\n",
-    "grad = torch.where(cond,43,0)\n",
-    "\n",
-    "print(f\"{true = }\\n{input = }\\n{cond = }\\n{grad = }\")"
+    "```C\n",
+    "nn : 1 partout\n",
+    "apx1 : si faux positif 100 ->  sinon 1\n",
+    "apx2 : si faux positif 100 -> 2 cas non couvert sinon 1/2\n",
+    "apx3 : si faux positif 100 -> 3 cas non couvert sinon 1/3\n",
+    "...\n",
+    "```"
    ]
   }
  ],
