datasets load change with base dataset + diabetes dataset

--- a/compare.ipynb
+++ b/compare.ipynb
@@ -32,7 +32,7 @@
     "sys.path.append(os.path.abspath(''))\n",
     "\n",
     "from compiling_nn.build_odd import compile_nn\n",
-    "from datasets.loan import get_loan_dataset\n",
+    "from datasets import LoanDataset, DiabetesDataset\n",
     "from utils.custom_activations import StepActivation\n",
     "from utils.custom_loss import AsymMSELoss, AsymBCELoss\n",
     "\n",
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "np_x, np_y = get_loan_dataset(balancing=True, discretizing=False, hot_encoding=True, rmv_pct=0.985)\n",
+    "np_x, np_y = LoanDataset.get_dataset(balancing=True, discretizing=False, hot_encoding=True, rmv_pct=0.985)\n",
     "x_data, y_data = torch.Tensor(np_x), torch.Tensor(np_y)\n",
     "input_size = x_data.size(1)\n",
     "print(x_data.size())"
