--- a/approx.ipynb
+++ b/approx.ipynb
@@ -38,7 +38,7 @@
     "sys.path.append(os.path.abspath(''))\n",
     "\n",
     "from compiling_nn.build_odd import compile_nn\n",
-    "from datasets.loan import get_loan_dataset\n",
+    "from datasets import LoanDataset, DiabetesDataset\n",
     "from utils.custom_activations import StepActivation\n",
     "from utils.custom_loss import AsymMSELoss, AsymBCELoss\n",
     "\n",
@@ -83,7 +83,7 @@
     }
    ],
    "source": [
-    "np_x, np_y = get_loan_dataset(True, True, True, 0.985)\n",
+    "np_x, np_y = LoanDataset.get_dataset(True, True, True, 0.985)\n",
     "x_train, y_train = torch.Tensor(np_x), torch.Tensor(np_y)\n",
     "\n",
     "input_size = x_train.size(1)\n",
