moved misc functions into dedicated file

--- a/approx.ipynb
+++ b/approx.ipynb
@@ -41,25 +41,9 @@
     "from datasets import LoanDataset, DiabetesDataset\n",
     "from utils.custom_activations import StepActivation\n",
     "from utils.custom_loss import AsymMSELoss, AsymBCELoss\n",
+    "from utils.misc import plot_cm, plot_combine_cm, cov_score\n",
     "\n",
     "pd.options.mode.copy_on_write = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_cm(y_true, y_pred):\n",
-    "    confusion_matrix = metrics.confusion_matrix(y_true, y_pred)\n",
-    "    cm_display = metrics.ConfusionMatrixDisplay(confusion_matrix, display_labels=[False, True])\n",
-    "    cm_display.plot()\n",
-    "\n",
-    "def tnot(a): return torch.logical_not(a)\n",
-    "def tor(a,b): return torch.logical_or(a,b)\n",
-    "def tand(a,b): return torch.logical_and(a,b)\n",
-    "def txor(a,b): return torch.logical_xor(a,b)"
    ]
   },
   {
@@ -727,17 +711,6 @@
     }
    ],
    "source": [
-    "def cov_score(y_true, y_pred):\n",
-    "    labels = np.unique(y_true)\n",
-    "    scores = {}\n",
-    "\n",
-    "    for label in labels:\n",
-    "        indices_true = np.where(y_true == label)[0]\n",
-    "        indices_pred = np.where(y_pred == label)[0]\n",
-    "        scores[label] = len(np.intersect1d(indices_true, indices_pred))/len(indices_true)\n",
-    "\n",
-    "    return scores\n",
-    "\n",
     "f1_wh = metrics.f1_score(y_train, y_pred_wh)\n",
     "f1_nn = metrics.f1_score(y_train, y_pred_nn)\n",
     "print(f\"f1 score whole nns : {f1_wh:.3f} | f1 score nn : {f1_nn:.3f}\")\n",
