--- a/compare.ipynb
+++ b/compare.ipynb
@@ -35,6 +35,7 @@
     "from datasets import LoanDataset, DiabetesDataset\n",
     "from utils.custom_activations import StepActivation\n",
     "from utils.custom_loss import AsymMSELoss, AsymBCELoss\n",
+    "from utils.misc import cov_score, cross_valid\n",
     "\n",
     "pd.options.mode.copy_on_write = True"
    ]
@@ -70,61 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metrics, Activations, Loss and Networks definitions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cm(y_true, y_pred):\n",
-    "    confusion_matrix = metrics.confusion_matrix(y_true, y_pred)\n",
-    "    cm_display = metrics.ConfusionMatrixDisplay(confusion_matrix, display_labels=[False, True])\n",
-    "    return cm_display\n",
-    "\n",
-    "def plot_cm(y_true, y_pred):\n",
-    "    cm_display = cm(y_true, y_pred)\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(4,8))\n",
-    "    cm_display.plot(ax=ax, colorbar=False)\n",
-    "\n",
-    "def plot_combine_cm(cms, titles=None):\n",
-    "    n = len(cms)\n",
-    "    fig, axs = plt.subplots(1, n, figsize=(4*n, 8))\n",
-    "    if titles:\n",
-    "        for ax, cm, title in zip(axs, cms, titles):\n",
-    "            cm.plot(ax=ax, colorbar=False)\n",
-    "            ax.set_title(title)\n",
-    "    else:\n",
-    "        for ax, cm in zip(axs, cms):\n",
-    "            cm.plot(ax=ax, colorbar=False)\n",
-    "    fig.tight_layout()\n",
-    "\n",
-    "def cov_score(y_true, y_pred):\n",
-    "    labels = np.unique(y_true)\n",
-    "    scores = {}\n",
-    "\n",
-    "    for label in labels:\n",
-    "        indices_true = np.where(y_true == label)[0]\n",
-    "        indices_pred = np.where(y_pred == label)[0]\n",
-    "        scores[label] = len(np.intersect1d(indices_true, indices_pred))/len(indices_true)\n",
-    "\n",
-    "    return scores\n",
-    "\n",
-    "def cross_valid(X, Y, train_func, skf, **kw_train):\n",
-    "    for train_index, test_index in skf.split(X, Y):\n",
-    "        x_train, x_test = X[train_index], X[test_index]\n",
-    "        y_train, y_test = Y[train_index], Y[test_index]\n",
-    "\n",
-    "        model, y_pred = train_func(x_train, y_train, **kw_train)\n",
-    "        model.eval()\n",
-    "        yield y_pred.detach().round(), y_train, model(x_test).detach(), y_test\n",
-    "\n",
-    "def tnot(a): return torch.logical_not(a)\n",
-    "def tor(a,b): return torch.logical_or(a,b)\n",
-    "def tand(a,b): return torch.logical_and(a,b)\n",
-    "def txor(a,b): return torch.logical_xor(a,b)"
+    "## Networks definitions"
    ]
   },
   {
@@ -274,47 +221,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_model(x, y, model, loss_fn, optimizer, max_epoch):\n",
-    "    for _ in range(max_epoch):\n",
-    "        model.train()\n",
-    "        y_pred = model(x)\n",
-    "        \n",
-    "        loss = loss_fn(y_pred, y)\n",
-    "\n",
-    "        model.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "    return model, y_pred\n",
-    "\n",
-    "def train_boundnet(x, y, max_epoch=5000, learning_rate=1e-2, weight_decay=1e-6):\n",
-    "    model = BoundNet()\n",
-    "    loss_fn = BoundNetLoss(AsymBCELoss(50), nn.BCELoss(), AsymBCELoss(.02))\n",
-    "    optimizer = Adam(model.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
-    "\n",
-    "    return train_model(x, y, model, loss_fn, optimizer, max_epoch=max_epoch)\n",
-    "\n",
-    "def train_simplenet(x, y, max_epoch=5000, learning_rate=1e-2, weight_decay=1e-6):\n",
-    "    model = SimpleNet()\n",
-    "    loss_fn = nn.BCELoss()\n",
-    "    optimizer = Adam(model.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
-    "\n",
-    "    return train_model(x, y, model, loss_fn, optimizer, max_epoch=max_epoch)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Network evaluation"
    ]
   },
@@ -436,8 +342,16 @@
    ],
    "source": [
     "skf = model_selection.StratifiedKFold(n_splits=10, shuffle=True, random_state=104)\n",
-    "bnet_split_res = cross_valid(x_data, y_data, train_boundnet, skf)\n",
-    "snet_split_res = cross_valid(x_data, y_data, train_simplenet, skf)\n",
+    "\n",
+    "bnet_model = BoundNet()\n",
+    "loss_fn = BoundNetLoss(AsymBCELoss(50), nn.BCELoss(), AsymBCELoss(.02))\n",
+    "optimizer = Adam(bnet_model.parameters(), lr=1e-2, weight_decay=1e-6)\n",
+    "bnet_split_res = cross_valid(x_data, y_data, bnet_model, loss_fn, optimizer, skf)\n",
+    "\n",
+    "snet_model = SimpleNet()\n",
+    "loss_fn = nn.BCELoss()\n",
+    "optimizer = Adam(snet_model.parameters(), lr=1e-2, weight_decay=1e-6)\n",
+    "snet_split_res = cross_valid(x_data, y_data, snet_model, loss_fn, optimizer, skf)\n",
     "\n",
     "dict_metrics = {(modelname, metric, key): [] for modelname in (\"boundnet\", \"simplenet\", \"hinet\", \"lonet\") \n",
     "                for metric in (\"f1score\", \"coverage0\", \"coverage1\") for key in (\"valid\", \"train\")}\n",
