mnist dataset access from datasets folder

--- a/approx_conv.ipynb
+++ b/approx_conv.ipynb
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "np_x, np_y = datasets.ObesityDataset.get_dataset(balancing=True, discretizing=False, hot_encoding=True, keep_label=[\"Obesity_Type_I\", \"Obesity_Type_II\"])\n",
+    "np_x, np_y = datasets.MnistDataset.get_dataset(balancing=True, discretizing=False, hot_encoding=True, keep_label=[\"Obesity_Type_I\", \"Obesity_Type_II\"])\n",
     "x_data, y_data = torch.Tensor(np_x), torch.Tensor(np_y)\n",
     "input_size = x_data.size(1)\n",
     "print(x_data.size())"
