loss_fn -> criterion

--- a/derivate_layer.ipynb
+++ b/derivate_layer.ipynb
@@ -371,14 +371,14 @@
    ],
    "source": [
     "model = Netv2()\n",
-    "loss_fn = nn.BCELoss()\n",
+    "criterion = nn.BCELoss()\n",
     "optimizer = Adam(model.parameters(), lr=1e-2, weight_decay=1e-6)\n",
     "\n",
     "model.net.nets.register_forward_hook(get_intermediate_outputs(\"parallel_out\"))\n",
     "hook_label = lambda y_train, y_test : model.net.or_.register_forward_pre_hook(true_label_for_backward(y_train, y_test))\n",
     "\n",
     "skf = model_selection.StratifiedKFold(n_splits=10, shuffle=True, random_state=104)\n",
-    "bnet_split_res = cross_valid(x_data, y_data, model, loss_fn, optimizer, skf, hook_label, max_epoch=500)\n",
+    "bnet_split_res = cross_valid(x_data, y_data, model, criterion, optimizer, skf, hook_label, max_epoch=500)\n",
     "\n",
     "nn_children = [name for name, _ in model.net.nets.named_children()]\n",
     "dict_metrics = {(modelname, metric, key): list() for modelname in [\"net\"] + nn_children\n",
@@ -494,10 +494,10 @@
    "outputs": [],
    "source": [
     "model_ref = CentralNet()\n",
-    "loss_fn_ref = nn.BCELoss()\n",
+    "criterion_ref = nn.BCELoss()\n",
     "optimizer_ref = Adam(model_ref.parameters(), lr=1e-2, weight_decay=1e-6)\n",
     "skf = model_selection.StratifiedKFold(n_splits=10, shuffle=True, random_state=104)\n",
-    "ref_split_res = cross_valid(x_data, y_data, model_ref, loss_fn_ref, optimizer_ref, skf, max_epoch=500)\n",
+    "ref_split_res = cross_valid(x_data, y_data, model_ref, criterion_ref, optimizer_ref, skf, max_epoch=500)\n",
     "\n",
     "ref_metrics = {('ref_model', metric, key): list() for metric in (\"f1score\", \"coverage0\", \"coverage1\") for key in (\"valid\", \"train\")}\n",
     "for train_pred, train_true, valid_pred, valid_true in ref_split_res:\n",
